--- a/Backend.WeChatApp/Backend.WeChatApp.API.Test/Backend.WeChatApp.API.Test.csproj
+++ b/Backend.WeChatApp/Backend.WeChatApp.API.Test/Backend.WeChatApp.API.Test.csproj
@@ -60,10 +60,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MessageHandlers\RequireHttpsMessageHandlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestHelpers\DelegatingHandlerExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Backend.WeChatApp.API\Backend.WeChatApp.API.csproj">
+      <Project>{55c646dd-42f2-4780-870c-8aff0cb09b80}</Project>
+      <Name>Backend.WeChatApp.API</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
