--- a/Backend.WeChatApp/Backend.WeChatApp.API/Backend.WeChatApp.API.csproj
+++ b/Backend.WeChatApp/Backend.WeChatApp.API/Backend.WeChatApp.API.csproj
@@ -67,13 +67,26 @@
     <Compile Include="Config\AutofacWebAPI.cs" />
     <Compile Include="Config\RouteConfig.cs" />
     <Compile Include="Config\WebAPIConfig.cs" />
+    <Compile Include="Filters\InvalidModelStateFilterAttribute.cs" />
+    <Compile Include="Formatting\SuppressedRequiredMemberSelector.cs" />
+    <Compile Include="MessageHandlers\RequireHttpsMessageHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Routing\GuidRouteConstraint.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Backend.WeChatApp.Domain\Backend.WeChatApp.Entity.csproj">
+      <Project>{fa39d40a-f0a8-44e7-99bc-e1456892e051}</Project>
+      <Name>Backend.WeChatApp.Entity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Backend.WeChatApp.Repository\Backend.WeChatApp.Repository.csproj">
+      <Project>{75c1ea23-d043-4a69-b102-556b8d2c1bce}</Project>
+      <Name>Backend.WeChatApp.Repository</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
