--- a/Backend.WeChatApp/Backend.WeChatApp.Repository/Backend.WeChatApp.Repository.csproj
+++ b/Backend.WeChatApp/Backend.WeChatApp.Repository/Backend.WeChatApp.Repository.csproj
@@ -52,14 +52,16 @@
     <Compile Include="Core\ConnectionFactory.cs" />
     <Compile Include="Core\DbSession.cs" />
     <Compile Include="Core\IDbSession.cs" />
-    <Compile Include="IRepository.cs" />
+    <Compile Include="Core\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SqlRepository.cs" />
+    <Compile Include="Sql\ISqlRepository.cs" />
+    <Compile Include="Sql\SqlRepositoryBase.cs" />
+    <Compile Include="Sql\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Backend.WeChatApp.Domain\Backend.WeChatApp.Domain.csproj">
+    <ProjectReference Include="..\Backend.WeChatApp.Domain\Backend.WeChatApp.Entity.csproj">
       <Project>{fa39d40a-f0a8-44e7-99bc-e1456892e051}</Project>
-      <Name>Backend.WeChatApp.Domain</Name>
+      <Name>Backend.WeChatApp.Entity</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
