--- a/Backend.WeChatApp/Backend.WeChatApp.API.Test/Backend.WeChatApp.API.Test.csproj
+++ b/Backend.WeChatApp/Backend.WeChatApp.API.Test/Backend.WeChatApp.API.Test.csproj
@@ -65,6 +65,7 @@
     <Compile Include="TestHelpers\DelegatingHandlerExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
