--- a/Backend.WeChatApp/Backend.WeChatApp.API/packages.config
+++ b/Backend.WeChatApp/Backend.WeChatApp.API/packages.config
@@ -4,5 +4,11 @@
   <package id="Autofac.WebApi2" version="4.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="WebApiDoodle" version="2.0.1" targetFramework="net45" />
+  <package id="WebApiDoodle.Net.Http" version="2.0.1" targetFramework="net45" />
+  <package id="WebApiDoodle.Net.Http.Formatting" version="2.0.1" targetFramework="net45" />
+  <package id="WebApiDoodle.Web" version="2.0.1" targetFramework="net45" />
+  <package id="WebApiDoodle.Web.Meta" version="2.0.1" targetFramework="net45" />
 </packages>
