--- a/Backend.WeChatApp/Backend.WeChatApp.Utility/Backend.WeChatApp.Utility.csproj
+++ b/Backend.WeChatApp/Backend.WeChatApp.Utility/Backend.WeChatApp.Utility.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{83F38780-7CAA-41F6-93B6-88E189A42CAB}</ProjectGuid>
+    <ProjectGuid>{C7677393-8C4D-481D-84C1-B98D338501FE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Backend.WeChatApp.Service</RootNamespace>
-    <AssemblyName>Backend.WeChatApp.Service</AssemblyName>
+    <RootNamespace>Backend.WeChatApp.Utility</RootNamespace>
+    <AssemblyName>Backend.WeChatApp.Utility</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,24 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common\OperationResult.cs" />
-    <Compile Include="Services\MembershipService.cs" />
-    <Compile Include="Services\CryptoService.cs" />
-    <Compile Include="Interfaces\ICryptoService.cs" />
-    <Compile Include="Interfaces\IMembershipService.cs" />
+    <Compile Include="EnumTypes\Status.cs" />
+    <Compile Include="Extensions\ListExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserWithRoles.cs" />
-    <Compile Include="ValidUserContext.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Backend.WeChatApp.Domain\Backend.WeChatApp.Entity.csproj">
-      <Project>{fa39d40a-f0a8-44e7-99bc-e1456892e051}</Project>
-      <Name>Backend.WeChatApp.Entity</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Backend.WeChatApp.Repository\Backend.WeChatApp.Repository.csproj">
-      <Project>{75c1ea23-d043-4a69-b102-556b8d2c1bce}</Project>
-      <Name>Backend.WeChatApp.Repository</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
